Charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: { { .Values.ingress.host | quote } }
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadence-service
                port:
                  number: 80
